--- a/04-css/css/oblikovanje.css
+++ b/04-css/css/oblikovanje.css
@@ -32,3 +32,38 @@ Določanje pisave: brskalnik uporabi prvo v seznamu pisav, ki jo ima uporabnik n
     margin: auto;
     /*  Obojestranska poravnava besedila    */
     text-align: 
+    h1 {
+        color: #330066;
+    }
+    h2 {
+        margin-top: 2em;
+        border-top: 1px solid #AAAAAA;
+        padding-top: 0.5em;
+    }
+    #uvod {
+        padding: 2em;
+        background-color: rgba(51, 0, 102, 0.1);
+    }
+    .slika {
+        border: 2px solid red; 
+        font-size: 0.9em;
+        width: 40%;
+        text-align: left;
+    }
+    .slika img {
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+    }
+    .slika {
+        float: right;
+        margin-left: 2em;
+    }
+    .slika p:last-child {
+        font-size: 0.8em; 
+        background-color: #cc0000; 
+        margin-top: 1em; 
+    }
+    
+    
+    
