--- a/04-css/css/oblikovanje.css
+++ b/04-css/css/oblikovanje.css
@@ -52,7 +52,7 @@ body {
            preostanek pa se enakomerno razdeli med levim in desnim robom  */
        margin: auto;
        /*  Obojestranska poravnava besedila    */
-       text-align: 
+       text-align: justify
 
 }
 
